various cleanups